--- a/Entity-Framework-Slider/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Entity-Framework-Slider/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -346,38 +346,12 @@
                                 <i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboard</span>
                             </a>
                         </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               aria-expanded="false">
-                                <i class="mdi mdi-chart-bar"></i><span class="hide-menu">Charts</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="~/admin/widgets.html"
-                               aria-expanded="false">
-                                <i class="mdi mdi-chart-bubble"></i><span class="hide-menu">Widgets</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="~/admin/tables.html"
-                               aria-expanded="false">
-                                <i class="mdi mdi-border-inside"></i><span class="hide-menu">Tables</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="~/admin/grid.html"
-                               aria-expanded="false">
-                                <i class="mdi mdi-blur-linear"></i><span class="hide-menu">Full Width</span>
-                            </a>
-                        </li>
+                       
                         <li class="sidebar-item">
                             <a class="sidebar-link has-arrow waves-effect waves-dark"
                                asp-area="Admin" asp-controller="Dashboard" asp-action="Index"
                                aria-expanded="false">
-                                <i class="mdi mdi-receipt"></i><span class="hide-menu">Dashboard </span>
+                                <i class="mdi mdi-receipt"></i><span class="hide-menu">Slider Area</span>
                             </a>
                             <ul aria-expanded="false" class="collapse first-level">
                                 <li class="sidebar-item">
@@ -394,9 +368,9 @@
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="pages-buttons.html"
+                               asp-area="Admin" asp-controller="Category" asp-action="Index"
                                aria-expanded="false">
-                                <i class="mdi mdi-relative-scale"></i><span class="hide-menu">Buttons</span>
+                                <i class="mdi mdi-relative-scale"></i><span class="hide-menu">Categories</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
