--- a/Entity-Framework-Slider/Areas/Admin/Views/Slider/Index.cshtml
+++ b/Entity-Framework-Slider/Areas/Admin/Views/Slider/Index.cshtml
@@ -5,55 +5,58 @@
 }
 
 
-<div class="container">
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Image</th>
-                <th scope="col">Status</th>
-                <th scope="col">Operation</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var slider in Model)
-            {
-
+<div class="container my-5">
+    <a class="btn btn-success text-white" asp-action="Create" style="float:right;">Create</a>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
                 <tr>
-
-                    <td class="py-1">
-                        <img src="~/img/@slider.Image" style="width:70px; height:70px; border-radius:50%" alt="image">
-                    </td>
-
-                    <td>
-                        <div class="active-status"></div>
-                        <div class="deActive"></div>
-
-
-                    </td>
-
-                    <td>
-                        <button type="button" class="btn btn-outline-info">
-                            Info
-                        </button>
-
-                        <button type="button" class="btn btn-outline-primary">
-                            Edit
-                        </button>
-
-                        <button type="button" class="btn btn-outline-danger">
-                            Delete
-                        </button>
-
-                    </td>
-
-
-
+                    <th scope="col">Image</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Operation</th>
                 </tr>
-            }
+            </thead>
+            <tbody>
+                @foreach (var slider in Model)
+                {
+
+                    <tr>
+
+                        <td class="py-1">
+                            <img src="~/img/@slider.Image" style="width:70px; height:70px; border-radius:50%" alt="image">
+                        </td>
+
+                        <td>
+                            <div class="active-status"></div>
+                            <div class="deActive"></div>
 
 
-        </tbody>
-    </table>
+                        </td>
+
+                        <td>
+                            <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@slider.Id">
+                                Info
+                            </a>
+
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@slider.Id">
+                                Edit
+                            </a>
+
+                            <a class="btn btn-outline-danger">
+                                Delete
+                            </a>
+                        </td>
+
+
+
+                    </tr>
+                }
+
+
+            </tbody>
+        </table>
+    </div>
+    
 
 </div>
 
